--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <index:>
-    <div class="loading-indicator @class" as="indicator">{{@content}}</div>
+    <div class="loading-indicator {{@class}}" as="indicator">{{@content}}</div>
